syntax = "proto3";

option go_package = "github.com/statistico/statistico-data/internal/proto/result";

package result;

import "google/protobuf/wrappers.proto";
import "internal/proto/competition/competition.proto";
import "internal/proto/round/round.proto";
import "internal/proto/season/season.proto";
import "internal/proto/team/team.proto";
import "internal/proto/venue/venue.proto";

service ResultService {
    rpc GetHistoricalResultsForFixture(HistoricalResultRequest) returns (stream Result) {}
    rpc GetResultsForSeason(SeasonRequest) returns (stream Result) {}
    rpc GetResultsForTeam(TeamRequest) returns (stream Result) {}
}

message TeamRequest {
    // The Team ID that the Result set relates to
    int64 team_id = 1;
    // The number of results to return. If limit is not set the whole Result set for the Team
    // will be returned
    google.protobuf.Int32Value limit = 2;
    // A filter to return Results before a specific date
    // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
    string date_before = 3;
}

message SeasonRequest {
    // The Season ID that the Result set relates to
    int64 season_id = 1;
}

message HistoricalResultRequest {
    // The Home Team ID that the Result set relates to
    uint64 home_team_id = 1;
    // The Away Team ID that the Result set relates to
    uint64 away_team_id = 2;
    // The number of results to return
    uint32 limit = 3;
    // A filter to return Results before a specific date
    // RFC3339 formatted string i.e "2006-01-02T15:04:05Z07:00"
    string date_before = 4;
}

message Result {
    int64 id = 1;
    competition.Competition competition = 2;
    season.Season season = 3;
    round.Round round = 4;
    venue.Venue venue = 5;
    google.protobuf.Int64Value referee_id = 6;
    int64 date_time = 7;
    MatchData match_data = 8;
}

message MatchData {
    team.Team home_team = 1;
    team.Team away_team = 2;
    MatchStats stats = 3;
}

message MatchStats {
    google.protobuf.StringValue pitch = 1;
    google.protobuf.StringValue home_formation = 2;
    google.protobuf.StringValue away_formation = 3;
    google.protobuf.Int32Value home_score = 4;
    google.protobuf.Int32Value away_score = 5;
    google.protobuf.Int32Value home_pen_score = 6;
    google.protobuf.Int32Value away_pen_score = 7;
    google.protobuf.StringValue half_time_score = 8;
    google.protobuf.StringValue full_time_score = 9;
    google.protobuf.StringValue extra_time_score = 10;
    google.protobuf.Int32Value home_league_position = 11;
    google.protobuf.Int32Value away_league_position = 12;
    google.protobuf.Int32Value minutes = 13;
    google.protobuf.Int32Value seconds = 14;
    google.protobuf.Int32Value added_time = 15;
    google.protobuf.Int32Value extra_time = 16;
    google.protobuf.Int32Value injury_time = 17;
}
